# TrainScanner

./: .gitignore  CHANGELOG.md  MANIFEST.in  MEMORY_MONITORING.md  Makefile  Pipfile  README.md  README_en.md  README_ja.md  TODO.md  TrainScanner.rb  TrainScanner.spec  add_instruction.py  antishake.x  bindepend.diff  bindepend.py  cachedcanvas.py  cachedimage.py  calibration.py  canvas.py  canvas2.py  converter_gui-setup.py  converter_gui.macos.spec  converter_gui.py  converter_gui.windows.spec  converter_gui.x  film.py  filmize.py  gui2.pro  gui2.py  gui2_ja.qm  gui2_ja.ts  gui3.py  gui4.pro  gui4.py  gui4_ja.qm  gui4_ja.ts  gui5.pro  gui5.py  gui5_ja.ts  (+57 more)
Instruction/: helix.py
anaconda/: Makefile  meta.diff  trainscanner-anaconda-0.11.1.yml  trainscanner-anaconda-0.11.2.yml  trainscanner-anaconda-0.11.yml  trainscanner-anaconda-ubuntu.yml  trainscanner-anaconda-win64.yml  trainscanner-anaconda.yml
anaconda/trainscanner/: meta.yaml
examples/: .gitignore  Makefile  dropframes.py  sample.mov  sample3.mov  sample5.mov  test.mov  test.py
hooks/: README.md  post-commit  pre-commit
i18n/: Makefile  gui2.pro  gui2_ja.qm  gui2_ja.ts  gui4.pro  gui4_ja.qm  gui4_ja.ts  gui5.pro  gui5_ja.qm  gui5_ja.ts  trainscanner.pro  trainscanner_ja.qm  trainscanner_ja.ts
mac/: .gitignore  Makefile  README.md  TrainScanner.icns  setup.py  trainscanner.drawio.icns  ts_converter.drawio.icns
old c++ sources/: Makefile  README  append.cpp  sample2.mov  trainscanner.cpp  trainscanner.hpp  tscanvas.cpp  tscanvas.hpp
test/: create_frame_test_video.py  find_subimage.py  pass1.old.py  preview.py  ribbon.py  template_extensible_canvas.py  test-video.py  test2.py  test3.py  test_opencv.py  test_seek.py  test_videoseek.py  test_vs.py
trainscanner/: __init__.py  __main__.py  canvas.py  decorators.py  imagebar.py  imageselector2.py  memory_monitor.py  pass1.py  pass1_gui.py  preprocess_gui.py  qrangeslider.py  rasterio_canvas.py  scaledcanvas.py  shake_reduction.py  shake_reduction2.py  shake_reduction2_gui.py  shakereduction.py  stitch.py  stitch_gui.py  trainscanner.py  trainscanner_gui.py  tspos_plot.py  video.py  video_cv2.py  video_decord.py  video_pyav.py  video_sk.py  video_vs.py
trainscanner/converter/: __init__.py  converter_gui.py  film.py  gui.py  hans_style.py  helix.py  movie.py  movie2.py  quake.py  rect.py  scroll.py
trainscanner/gui/: converter.py  pass1.py  preprocess.py  shake_reduction.py  stitch.py  trainscanner.py  tspos_plotter.py
trainscanner/i18n/: Makefile  __init__.py  extract.py  trainscanner.pro  trainscanner.qph  trainscanner_fr.qm  trainscanner_fr.ts  trainscanner_ja.qm  trainscanner_ja.ts  translations.py
trainscanner/image/: __init__.py  __rasterio_canvas.py  add_instruction.py  canvas.py  film.py  rasterio_canvas.py  scaledcanvas.py
trainscanner/video/: __init__.py  ffmpeg.py  image_dir.py  video_cv2.py  video_sk.py
trainscanner/widget/: __init__.py  canvas.py  imagebar.py  imageselector2.py  options.py  qfloatslider.py  qlogslider.py  qrangeslider.py  qvalueslider.py  scaledcanvas.py
ts_conv/: __init__.py  add_instruction.py  converter_gui.py  film.py  hans_style.py  helix.py  movie.py  rect.py
ts_conv/i18n/: trainscanner_ja.qm
unused/: gui2.py  gui3.py  hans2.py
unused/test/: boxresizable.py  imageselector2.py  overlaylayout.py  ribbon.pov  test1.py  test3+stream.py  test4-lefttrim.py  test4.py  test_bc.py  test_videoseek.py
videosequence/: __init__.py
win/: .gitignore  README.md  setup.py
